--- a/.github/workflows/deploy-to-skynet.yml
+++ b/.github/workflows/deploy-to-skynet.yml
@@ -17,13 +17,12 @@ jobs:
       - run: yarn
       - run: yarn build
         env:
-          ALGOLIA_ADMIN_KEY: { { secrets.ALGOLIA_ADMIN_KEY } }
-          DEFI_PULSE_API_KEY: { { secrets.DEFI_PULSE_API_KEY } }
-          ETHERSCAN_API_KEY: { { secrets.ETHERSCAN_API_KEY } }
-          GATSBY_ALGOLIA_APP_ID: { { secrets.GATSBY_ALGOLIA_APP_ID } }
-          GATSBY_ALGOLIA_SEARCH_KEY: { { secrets.GATSBY_ALGOLIA_SEARCH_KEY } }
-          GATSBY_GITHUB_TOKEN_READ_ONLY:
-            { { secrets.GATSBY_GITHUB_TOKEN_READ_ONLY } }
+          ALGOLIA_ADMIN_KEY: ${{secrets.ALGOLIA_ADMIN_KEY}}
+          DEFI_PULSE_API_KEY: ${{secrets.DEFI_PULSE_API_KEY}}
+          ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
+          GATSBY_ALGOLIA_APP_ID: ${{secrets.GATSBY_ALGOLIA_APP_ID}}
+          GATSBY_ALGOLIA_SEARCH_KEY: ${{secrets.GATSBY_ALGOLIA_SEARCH_KEY}}
+          GATSBY_GITHUB_TOKEN_READ_ONLY: ${{secrets.GATSBY_GITHUB_TOKEN_READ_ONLY}}
 
       - name: "Deploy to Skynet"
         uses: SkynetLabs/deploy-to-skynet-action@v2
