--- a/.github/workflows/deploy-to-skynet.yml
+++ b/.github/workflows/deploy-to-skynet.yml
@@ -14,15 +14,15 @@ jobs:
         with:
           node-version: 16.x
 
-      # - run: yarn
-      # - run: yarn build
-      #   env:
-      #     ALGOLIA_ADMIN_KEY: ${{secrets.ALGOLIA_ADMIN_KEY}}
-      #     DEFI_PULSE_API_KEY: ${{secrets.DEFI_PULSE_API_KEY}}
-      #     ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
-      #     GATSBY_ALGOLIA_APP_ID: ${{secrets.GATSBY_ALGOLIA_APP_ID}}
-      #     GATSBY_ALGOLIA_SEARCH_KEY: ${{secrets.GATSBY_ALGOLIA_SEARCH_KEY}}
-      #     GATSBY_GITHUB_TOKEN_READ_ONLY: ${{secrets.GATSBY_GITHUB_TOKEN_READ_ONLY}}
+      - run: yarn
+      - run: yarn build
+        env:
+          ALGOLIA_ADMIN_KEY: ${{secrets.ALGOLIA_ADMIN_KEY}}
+          DEFI_PULSE_API_KEY: ${{secrets.DEFI_PULSE_API_KEY}}
+          ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
+          GATSBY_ALGOLIA_APP_ID: ${{secrets.GATSBY_ALGOLIA_APP_ID}}
+          GATSBY_ALGOLIA_SEARCH_KEY: ${{secrets.GATSBY_ALGOLIA_SEARCH_KEY}}
+          GATSBY_GITHUB_TOKEN_READ_ONLY: ${{secrets.GATSBY_GITHUB_TOKEN_READ_ONLY}}
 
       - name: "Deploy to Skynet"
         uses: SkynetLabs/deploy-to-skynet-action@update-nodejs-add-jwt
@@ -30,5 +30,6 @@ jobs:
           upload-dir: static
           github-token: ${{ secrets.GITHUB_TOKEN }}
           registry-seed: ${{ secrets.SKYNET_REGISTRY_SEED || '' }}
-          # try-files: index.html /index.html
+          try-files: index.html /index.html
           skynet-jwt: ${{ secrets.SKYNET_JWT }}
+          portal-url: https://dev1.siasky.dev
