--- a/.github/workflows/deploy-to-skynet.yml
+++ b/.github/workflows/deploy-to-skynet.yml
@@ -25,7 +25,7 @@ jobs:
           GATSBY_GITHUB_TOKEN_READ_ONLY: ${{secrets.GATSBY_GITHUB_TOKEN_READ_ONLY}}
 
       - name: "Deploy to Skynet"
-        uses: SkynetLabs/deploy-to-skynet-action@update-nodejs-add-jwt
+        uses: SkynetLabs/deploy-to-skynet-action@main
         with:
           upload-dir: static
           github-token: ${{ secrets.GITHUB_TOKEN }}
