adding gatsby env vars

--- a/.github/workflows/deploy-to-skynet.yml
+++ b/.github/workflows/deploy-to-skynet.yml
@@ -19,7 +19,9 @@ jobs:
         env:
           ALGOLIA_ADMIN_KEY: ${{secrets.ALGOLIA_ADMIN_KEY}}
           DEFI_PULSE_API_KEY: ${{secrets.DEFI_PULSE_API_KEY}}
+          GATSBY_DEFI_PULSE_API_KEY: ${{secrets.DEFI_PULSE_API_KEY}}
           ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
+          GATSBY_ETHERSCAN_API_KEY: ${{secrets.ETHERSCAN_API_KEY}}
           GATSBY_ALGOLIA_APP_ID: ${{secrets.GATSBY_ALGOLIA_APP_ID}}
           GATSBY_ALGOLIA_SEARCH_KEY: ${{secrets.GATSBY_ALGOLIA_SEARCH_KEY}}
           GATSBY_GITHUB_TOKEN_READ_ONLY: ${{secrets.GATSBY_GITHUB_TOKEN_READ_ONLY}}
